about me finished

--- a/index.html
+++ b/index.html
@@ -90,32 +90,44 @@
         </div>
         <div class="about-details-container">
           <div class="about-containers">
-            <div class="detals-container">
+            <div class="details-container">
               <img
                 src="./assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
-            <h3>Experience</h3>
-            <p>2+ years <br />Frontend Development</p>
-          </div>
-          <div class="details-container">
-            <img
+              <h3>Experience</h3>
+              <p>2+ years <br />Frontend Development</p>
+            </div>
+            <div class="details-container">
+              <img
                 src="./assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
-            <h3>Education</h3>
-            <p>BS Computer Science</p>
+              <h3>Education</h3>
+              <p>BS Computer Science</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              I live in California, and am currently studying Computer Science
+              at CSUB and really enjoy diving into programming and building
+              projects. Being a student here has given me a lot of opportunities
+              to learn and grow, especially through hands-on project work. I
+              love the process of turning ideas into reality, there's nothing
+              more satisfying than seeing a project come to life. I'm grateful
+              for the experiences and knowledge I've gained along the way.
+            </p>
           </div>
         </div>
-        <div class="text-container">
-          <p>
-            I live in California, and am currently studying Computer Science at CSUB and really enjoy diving into programming and building projects. Being a student here has given me a lot of opportunities to learn and grow, especially through hands-on project work. I love the process of turning ideas into reality, there's nothing more satisfying than seeing a project come to life. I'm grateful for the experiences and knowledge I've gained along the way.
-          </p>
-        </div>
       </div>
-      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
     </section>
     <script src="script.js"></script>
   </body>
