--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="location.href='./#contact'"
       />
     </section>
     <section id="contact">
