--- a/index.html
+++ b/index.html
@@ -135,8 +135,57 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <!-- <h2 class="experience-sub-title">Frontend Development</h2>
             <div class="article-container">
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                  <!-- <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                  <!-- <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JavaScript</h3>
+                  <!-- <p>Experienced</p>
+                </div>
+              </article>
+            </div>
+          </div> -->
+          <div class="details-container">
+            <h2 class="experience-sub-title">Skills & Technologies</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>C/C++</h3>
+                  <!-- <p>Experienced</p> -->
+                </div>
+              </article>
               <article>
                 <img
                   src="./assets//checkmark.png"
@@ -170,11 +219,6 @@
                   <!-- <p>Experienced</p> -->
                 </div>
               </article>
-            </div>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
               <article>
                 <img
                   src="./assets//checkmark.png"
@@ -194,6 +238,28 @@
                 />
                 <div>
                   <h3>Git</h3>
+                  <!-- <p>Experienced</p> -->
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Java</h3>
+                  <!-- <p>Experienced</p> -->
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Android Studio</h3>
                   <!-- <p>Experienced</p> -->
                 </div>
               </article>
@@ -221,17 +287,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Bark Buddies</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/CecilioN7/motif"
+                onclick="location.href='https://github.com/Atorres523/app_dev'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/CecilioN7/motif"
+                onclick="location.href='https://github.com/Atorres523/app_dev'"
               >
                 Live Demo
               </button>
@@ -240,22 +306,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project-2.gif"
                 alt="project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Tradespace </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/CecilioN7/motif"
+                onclick="location.href='https://github.com/Tagaca19e/3420-project'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/CecilioN7/motif"
+                onclick="location.href='https://github.com/Tagaca19e/3420-project'"
               >
                 Live Demo
               </button>
@@ -264,22 +330,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-3.gif"
                 alt="project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Motif</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/CecilioN7/motif"
+                onclick="location.href='https://github.com/CecilioN7/motif'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/CecilioN7/motif"
+                onclick="location.href='https://github.com/CecilioN7/motif'"
               >
                 Live Demo
               </button>
@@ -296,7 +362,7 @@
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contacts Me</h1>
+      <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
