--- a/index.html
+++ b/index.html
@@ -355,6 +355,30 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-4.gif"
+                alt="project 4"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Capital Ship Combat</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/tayhooser/betterbattleship'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/tayhooser/betterbattleship'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <img
