--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
             class="icon contact-icon email-icon"
           />
           <p>
-            <a href="mailto:navarroscecilio@gmail.com"
-              >navarroscecilio@gmail.com</a
+            <a href="mailto:ceciliosnavarro@gmail.com"
+              >ceciliosnavarro@gmail.com</a
             >
           </p>
         </div>
