--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.linkedin.com/in/cecilio-navarro-611396277/"
+            <a href="www.linkedin.com/in/cecilio-samuel-navarro-611396277"
               >LinkedIn</a
             >
           </p>
