--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Cecilio Navarro - Software Engineer 2024 resume')"
+            onclick="window.open('assets/Cecilio Navarro - Software Engineer 2024 resume.pdf')"
           >
             Download Resume
           </button>
