--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/cecilio-navarro-611396277/'"
+            onclick="location.href='https://www.linkedin.com/in/cecilio-samuel-navarro/'"
           />
           <img
             src="./assets/github.png"
@@ -411,7 +411,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="www.linkedin.com/in/cecilio-samuel-navarro-611396277"
+            <a href="https://www.linkedin.com/in/cecilio-samuel-navarro/"
               >LinkedIn</a
             >
           </p>
