--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Cecilio Navarro - Software Engineer 2024 resume.pdf')"
+            onclick="window.open('assets/Cecilio Navarro - Software Engineer 2024 resume.docx.pdf')"
           >
             Download Resume
           </button>
@@ -197,6 +197,17 @@
                   class="icon"
                 />
                 <div>
+                  <h3>Python</h3>
+                  <!-- <p>Experienced</p> -->
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>HTML</h3>
                   <!-- <p>Experienced</p> -->
                 </div>
@@ -252,7 +263,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Java</h3>
+                  <h3>Swift</h3>
+                  <!-- <p>Experienced</p> -->
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Kotlin</h3>
                   <!-- <p>Experienced</p> -->
                 </div>
               </article>
